# belugas

./: .gitignore  API_COVERAGE.md  CONTRIBUTING.md  MISSING_SQLGLOT.md  README.md  analysis.md  pyproject.toml  ruff.toml
.github/instructions/: pql_instructions.instructions.md
scripts/: __init__.py  __main__.py  _benchmark.py  _benchmark_dtypes.py  _check_missing_sqlglot.py  _literal_generator.py  _theme_generator.py  _utils.py
scripts/comparator/: _array_builder.py  _infos.py  _main.py  _parse.py  _text.py
scripts/fn_generator/: _dtypes.py  _format.py  _main.py  _query.py  _rules.py  _schemas.py  _sections.py  _str_builder.py
scripts/meta_generator/: _main.py
src/belugas/: __init__.py  _core.py  _expr.py  _fns.py  _frame.py  _funcs.py  _groupby.py  _joins.py  _meta.py  _scans.py  _show.py  _sqlglot_patch.py  _when.py  _window.py  datatypes.py  namespaces.py  selectors.py  typing.py  utils.py
src/pql/: __init__.py  _datatypes.py  _expr.py  _frame.py  _funcs.py  _groupby.py  _joins.py  _meta.py  _namespaces.py  _parser.py  _scans.py  _schema.py  _sqlglot_patch.py  selectors.py  typing.py
tests/: _data.py  _utils.py  test_aliases.py  test_arr_namespace.py  test_complex_qry.py  test_conversions.py  test_datatypes.py  test_dt_namespace.py  test_exprs.py  test_files.py  test_funcs.py  test_integration.py  test_lazyframe.py  test_lazyframe_joins.py  test_lazyframe_pivots.py  test_lazygroupby.py  test_list_namespace.py  test_logical_plan.py  test_meta.py  test_name_namespace.py  test_selectors.py  test_slots.py  test_str_namespace.py  test_struct_namespace.py
(+42 files in other folders)
