[project]
    dependencies    = ["duckdb>=1.5.3", "pyochain>=0.24.0", "sqlglot[c]>=30.8.0"]
    description     = "Polars syntax for SQL"
    name            = "belugas"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.1.0"

[dependency-groups]
    dev = [
        "basedpyright>=1.38.2",
        "ibis>=3.3.0",
        "matplotlib>=3.10.8",
        "narwhals>=2.15.0",
        "numpy>=2.4.2",
        "pandas-stubs>=3.0.0.260204",
        "pandas>=3.0.1",
        "polars>=1.37.1",
        "pyarrow-stubs>=20.0.0.20251215",
        "pyarrow>=23.0.0",
        "pytest-cov>=7.0.0",
        "pytest>=9.0.2",
        "pytz>=2025.2",
        "ruff>=0.14.14",
        "sdsort>=0.4.2",
        "typer>=0.21.1",
    ]
[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.15,<0.9.0"]
[tool.coverage.run]
    omit = ["src/belugas/_types.py"]
[tool.basedpyright]
    reportImportCycles     = false
    reportMissingSuperCall = false
    typeCheckingMode       = "all"
[tool.pyrefly]
    preset      = "all"
    search-path = ["."]
[tool.pytest.ini_options]
    testpaths = ["tests"]
